Mejorando la aplicacion

--- a/entrega/src/index.html
+++ b/entrega/src/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/material-components-web.css">
 
     </head>
-    <body>
+    <body class="login-content sw-toggled">
         <app-root></app-root>
     </body>
 </html>
