--- a/entrega/src/index.html
+++ b/entrega/src/index.html
@@ -10,9 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="assets/css/material-components-web.css">
-
     </head>
-    <body class="login-content">
+    <body>
         <app-root></app-root>
     </body>
 </html>
